--- a/src/main/webapp/resources/css/layout.css
+++ b/src/main/webapp/resources/css/layout.css
@@ -12,6 +12,8 @@ button,
 a,
 select{cursor: pointer;}
 
+a:hover, a:focus, a:active {text-decoration:underline;}
+
 .img-box{position:relative; width:100%; overflow:hidden}
 .img-box img{display: block; object-fit: cover; width:100%; height:100%;}
 
@@ -23,7 +25,7 @@ div.header-top{position: relative; padding: 20px 0; box-sizing: border-box; }
 
 /* h1 로고 스타일  */
 .logo{width: 170px; height: 50px; margin: 0 auto;}
-.logo a{display: block; width: 100%; height: 100%; background: url("../img/logo.png") center center no-repeat; text-indent: -9999px;}
+.logo a{display: block; width: 100%; height: 100%; }
 
 /* 로그인 이동 스타일 */
 div.utill{display: flex; align-items: center; position: absolute; top: 50%; right: 10px; transform: translateY(-50%);}
