ChargeController 생성 ChargeDTO 생성 ChargeMapper interface 생성 ChargeMapper xml 생성 checkpage.css 수정 charge/list.jsp 생성

--- a/src/main/webapp/resources/css/checkpage.css
+++ b/src/main/webapp/resources/css/checkpage.css
@@ -1,1 +1,19 @@
 @charset "UTF-8";
+#block_A{
+	width: 80%;
+	height: 35%;
+	margin: 20px;
+	background-color: #ddd;
+	border: 1px solid black;
+	border-radius: 7px;
+}
+#block_B{
+	width: 80%;
+	height: 35%;
+	margin: 20px;
+	margin-top: 40px;
+	background-color: #ddd;
+	border: 1px solid black;
+	border-radius: 7px;
+}
+#block_B
