--- a/src/main/webapp/resources/css/layout.css
+++ b/src/main/webapp/resources/css/layout.css
@@ -4,15 +4,16 @@
 @import url("./member.css?after");
 @import url("./qna_board.css?after");
 @import url("./checkpage.css?after");
+@import url("./main.css?after");
 
 html {width:100%; font-size:10px;}
-body{position: relative; max-width:1200px; min-width: 1200px; margin:0 auto 0; font-size:1.6rem; font-family: 'Pretendard', dotum, Helvetica, sans-serif; }
+body{position: relative; max-width:1200px; min-width: 1200px; margin:0 auto 0; font-size:1.6rem; font-family: 'Pretendard', dotum, Helvetica, sans-serif; background:#f5f5f5; }
 
 button,
 a,
 select{cursor: pointer;}
 
-a:hover, a:focus, a:active {text-decoration:underline;}
+a:hover, a:focus, a:active {text-decoration:none;}
 
 .img-box{position:relative; width:100%; overflow:hidden}
 .img-box img{display: block; object-fit: cover; width:100%; height:100%;}
@@ -21,11 +22,11 @@ a:hover, a:focus, a:active {text-decoration:underline;}
 
 /* header */
 #header{position: relative}
-div.header-top{position: relative; padding: 20px 0; box-sizing: border-box; }
+div.header-top{position: relative; padding: 10px 0; box-sizing: border-box; border-bottom:1px solid #ddd;}
 
 /* h1 로고 스타일  */
-.logo{width: 170px; height: 50px; margin: 0 auto;}
-.logo a{display: block; width: 100%; height: 100%; }
+.logo{width: auto;display: inline-block;}
+.logo a{display: block; width: 100%; height: 100%; font-size:18px; font-weight:800; line-height:50px;}
 
 /* 로그인 이동 스타일 */
 div.utill{display: flex; align-items: center; position: absolute; top: 50%; right: 10px; transform: translateY(-50%);}
@@ -40,7 +41,7 @@ div.utill ul li:hover{font-weight: 800;}
 /* gnb */
 #gnb{position: relative;}
 #gnb > ul{display: flex; }
-#gnb > ul > li{position: relative; width:calc(100%/5); } 
+#gnb > ul > li{position: relative; width:calc(100%/4); } 
 #gnb > ul > li > a{display: block; text-align: center; height: 60px; line-height: 60px; border-bottom: 1px solid #ddd;}
 
 #gnb > ul > li > ul{
