--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -2,3 +2,55 @@
 
 body.main{ max-width:700px; min-width: 700px}
 body.main #wrap{position: relative; background: rgba(255, 255, 255, 0.8);}
+
+body.main #content{padding:20px;}
+
+body.main #footer .footer-info{padding:30px 20px;}
+
+
+body.main div.box{position:relative; padding: 40px 30px; border-radius:9px; border:1px solid #ddd; box-sizing:border-box; }
+body.main div.box > p{font-size:18px; font-weight:800; margin-bottom:20px; padding-bottom:20px; border-bottom:1px solid #ddd;}
+body.main div.box dl{display:flex; align-items: center; margin-bottom:10px; font-size:14px}
+body.main div.box dl:last-of-type{margin-bottom:20px;}
+body.main div.box dl > dt{width:180px; padding-right:20px; box-sizing:border-box;}
+body.main div.box dl > dd{position:relative; width:500px;}
+
+body.main div.box dl > dd span.stic{position: relative; overflow: hidden; }
+body.main div.box dl > dd span.stic:after{
+    position: absolute;
+    content: '';
+    top: calc(50% - 50px);
+    width: 20px;
+    height: 100px;
+    background: rgba(255,255,255,1);
+    transform:  rotate(30deg);
+    opacity: 0.5;
+    transition: all 1s;
+    animation: any 2s infinite;
+}
+@keyframes any{
+	0% {left: -50px;}
+	100% {left:120%;}
+	
+}
+body.main div.box dl > dd span.stic-txt{
+	position: absolute;
+    top: 50%;
+    font-size: 12px;
+    padding-left: 1%;
+    transform: translateY(-50%);
+}
+
+div.blur{
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.5);
+    bottom: 30px;
+    left: 0;
+    padding: 60px 0 100px;
+}
+div.blur:before{display:block; content: ''; width:100%; height:100%;}
+
+div.blur div.btn-box{width:150px; margin:10px auto 0;}
+div.blur div.btn-box > p{font-weight:600;}
