--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -10,9 +10,35 @@ button,
 a,
 select{cursor: pointer;}
 
+button{border:0;}
+
 .img-box{position:relative; width:100%; overflow:hidden}
 .img-box img{display: block; object-fit: cover; width:100%; height:100%;}
 
+
+.btn{
+	display:block; 
+	width:100%; 
+	text-align:center; 
+	font-size: 14px; 
+	font-weight: 800; 
+	background:rgb(73, 73, 238); 
+	border-radius: 9px; 
+	color: #fff; 
+	border: 1px solid transparent; 
+	transition: all 0.5s;
+}
+.btn.btn-bagic{
+	height: 40px; 
+	line-height: 40px; 
+}
+
+.btn.btn-bagic.line{
+	background:#fff;
+	color:rgb(73, 73, 238);
+	border:1px solid rgb(73, 73, 238);
+	
+}
 
 /* display:flex css */
 .flex{display:flex;}
