--- a/src/main/webapp/resources/css/checkpage.css
+++ b/src/main/webapp/resources/css/checkpage.css
@@ -6,6 +6,9 @@
 	background-color: #ddd;
 	border: 1px solid black;
 	border-radius: 7px;
+	display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: 200px;
 }
 #block_B{
 	width: 80%;
@@ -15,5 +18,13 @@
 	background-color: #ddd;
 	border: 1px solid black;
 	border-radius: 7px;
+	display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: 200px;
 }
-#block_B
+#block_A_1 > h3{
+	font-size: 30px;
+	display: block;
+	width: 100%;
+	height: 50%;
+}
