--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -48,9 +48,19 @@ div.blur{
     background: rgba(255, 255, 255, 0.5);
     bottom: 30px;
     left: 0;
-    padding: 60px 0 100px;
+    padding: 90px 0 130px;
 }
-div.blur:before{display:block; content: ''; width:100%; height:100%;}
-
+div.blur > p{font-size:18px; font-weight:800}
 div.blur div.btn-box{width:150px; margin:10px auto 0;}
 div.blur div.btn-box > p{font-weight:600;}
+
+
+div.section02{margin-top:50px}
+div.section02 > p{font-size:18px; font-weight:800; margin-bottom:20px; padding-bottom:20px; border-bottom:1px solid #ddd;}
+div.section02 > p span{font-size:14px; font-weight:400}
+div.section02 ul{margin-top:30px}
+div.section02 ul li{text-align:center; width:25%;}
+div.section02 ul li p{font-size:14px; margin-top:10px;}
+div.section02 ul li p span{display:block; font-size:20px; font-weight:800;}
+div.section02 ul li i{font-size:40px;}
+
