--- a/src/main/webapp/resources/css/checkpage.css
+++ b/src/main/webapp/resources/css/checkpage.css
@@ -1,30 +1,11 @@
 @charset "UTF-8";
-#block_A{
-	width: 80%;
-	height: 35%;
-	margin: 20px;
-	background-color: #ddd;
-	border: 1px solid black;
-	border-radius: 7px;
-	display: grid;
-    grid-template-columns: repeat(2, 50%);
-    grid-template-rows: 200px;
-}
-#block_B{
-	width: 80%;
-	height: 35%;
-	margin: 20px;
-	margin-top: 40px;
-	background-color: #ddd;
-	border: 1px solid black;
-	border-radius: 7px;
-	display: grid;
-    grid-template-columns: repeat(2, 50%);
-    grid-template-rows: 200px;
-}
-#block_A_1 > h3{
-	font-size: 30px;
-	display: block;
-	width: 100%;
-	height: 50%;
-}
+
+
+body.charge #content{} 
+body.charge #content > div{padding:20px; border-radius:9px; border:1px solid #ddd; margin-top:20px;}
+body.charge #content > div.section01 > div{padding:20px; border-radius:9px; border:1px solid #ddd;}
+body.charge #content > div.section01 > div:last-child{margin-top:20px;}
+
+#block_C > div:last-child{margin-top: 20px;}
+#block_C h3{font-size:20px; font-weight:800;}
+#block_C p{}
