--- a/src/main/webapp/resources/css/layout.css
+++ b/src/main/webapp/resources/css/layout.css
@@ -18,18 +18,46 @@ a:hover, a:focus, a:active {text-decoration:none;}
 .img-box{position:relative; width:100%; overflow:hidden}
 .img-box img{display: block; object-fit: cover; width:100%; height:100%;}
 
-#wrap{position: relative;}
+/**/
+#wrap{position: relative; max-width:700px; min-width: 700px; margin:0 auto 0; background: rgba(255,255,255,0.8); overflow: hidden;}
 
 /* header */
-#header{position: relative}
-div.header-top{position: relative; padding: 10px 0; box-sizing: border-box; border-bottom:1px solid #ddd;}
+#header{position: relative; border-bottom: 1px solid #ddd;}
+div.header-top{position: relative; padding: 20px 0; box-sizing: border-box; }
+
+/* container */
+#container{padding:0 4%; box-sizing: border-box;}
 
 /* h1 로고 스타일  */
-.logo{width: auto; display: inline-block; margin-left:10px}
-.logo a{display: block; width: 100%; height: 100%; font-size:18px; font-weight:800; line-height:50px;}
+/* h1 로고 스타일  */
+.logo{width: auto; display: inline-block; margin-left:4%}
+.logo a{display: block; width: 100%; height: 100%; font-size:12px; font-weight:600; line-height:1.5;}
+.logo a span{display: block; font-size: 18px; font-weight: 800;}
+
+/* 햄버거 버튼  */
+button#more-gnb{
+    position: absolute;
+    top: 50%;
+    right: 4%;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    z-index: 200;
+    background:none;
+    padding:0;
+}
+button#more-gnb span{display: block; width: 100%; height: 2px; background: #222;  transition: all 0.5s;}
+
+button#more-gnb.on span{position: absolute; top:50%; left: 0;}
+button#more-gnb.on span:nth-child(2){display: none; transform: translateY(-50%) rotate(225deg);}
+button#more-gnb.on span:first-child{transform: translateY(-50%) rotate(225deg);}
+button#more-gnb.on span:last-child{transform: translateY(-50%) rotate(315deg)}
 
 /* 로그인 이동 스타일 */
-div.utill{display: flex; align-items: center; position: absolute; top: 50%; right: 10px; transform: translateY(-50%);}
+div.utill{display: flex; align-items: center; position: absolute; top: 30px; left: 4%;}
 div.utill ul{display: flex;}
 div.utill ul li{position: relative; margin-right: 10px; padding-right: 10px;}
 div.utill ul li::after{content: ""; display: block; position: absolute; top:50%; right: 0; transform: translateY(-50%); width: 1px; height: 10px; background: #ddd;}
@@ -39,25 +67,12 @@ div.utill ul li:last-of-type::after{display: none;}
 div.utill ul li:hover{font-weight: 800;}
 
 /* gnb */
-#gnb{position: relative;}
-#gnb > ul{display: flex; }
-#gnb > ul > li{position: relative; width:calc(100%/3); } 
-#gnb > ul > li > a{display: block; text-align: center; height: 60px; line-height: 60px; border-bottom: 1px solid #ddd;}
-
-#gnb > ul > li > ul{
-    display: none;  
-    position: absolute;
-    top: 60px;
-    left: 0;
-    width: 100%;
-    z-index: 10;
-    background: #fff;
-}
-#gnb > ul > li > ul > li > a{display: block; width: 100%; height: 100%; text-align: center; padding: 20px 0; border: 1px solid #ddd; border-top: 0;}
-
-#gnb ul li:hover > a{ font-weight: 800; text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);}
-#gnb ul li:hover > ul{display: block;}
-
+#gnb{position: absolute; top: 0; right: -100%; width: 100%; height: 100vh; background: rgba(0,0,0,0.8); transition: all 0.5s; z-index: 100;}
+#gnb > div{position: absolute; top: 0; right:0; width: 80%; height: 100vh; background: #fff; padding: 0 4%; box-sizing: border-box;}
+#gnb > div > ul{margin-top: 85px; border-top: 1px solid #ddd;}
+#gnb > div > ul > li{border-bottom: 1px solid #ddd;}
+#gnb > div > ul > li a{display: block; padding: 20px 10px; font-size: 16px; font-weight: 600; box-sizing: border-box;}
+#gnb.open{right: 0;}
 
 /* popup_layer */
 #popup_layer{position: fixed; top:0; left: 0; width: 100%; height: 100vh; background: rgba(0,0,0,0.5); z-index: 300; display: none;}
@@ -72,18 +87,10 @@ div.utill ul li:hover{font-weight: 800;}
 #footer .top-btn a{display: block; width: 100%; height: 100%;}
 #footer .top-btn:hover{}
 #footer .footer-top{padding: 20px 0; }
-#footer .footer-top .left{width: 60%;}
-#footer .footer-top .left dl dt{width: 20%; font-weight: 800; font-size: 20px;}
-#footer .footer-top .left dl dd{width: 80%;}
-#footer .footer-top .right ul li a{display: block; padding: 0 0 0 15px; margin-left: 15px; border-left: 1px solid #ddd;}
-#footer .footer-top .right ul li:first-child a{border-left: 0;}
-#footer .footer-top .right ul li.on a{font-weight: 800;}
-#footer .footer-info{padding: 30px 0;}
-#footer .footer-info .left{}
-#footer .footer-info .left > ul > li{width: 300px;}
-#footer .footer-info .left > ul > li > a{font-weight: 800; font-size: 18px;;}
-#footer .footer-info .left > ul > li > ul > li > a{font-weight: 500; font-size: 14px; padding: 10px 0; }
-#footer .footer-info .right{position: relative;}
-#footer .footer-info .right p{ font-weight: 800;}
-#footer .footer-info .right a{display: block; width: auto; margin: 30px 0; padding: 15px; border: 1px solid #999; font-size: 20px; font-weight: 800; text-align: center;}
-#footer .footer-info .right ul li{font-size: 14px;}
+#footer .footer-top ul li a{display: block; padding: 0 0 0 15px; margin-left: 15px; border-left: 1px solid #ddd;}
+#footer .footer-top ul li:first-child a{border-left: 0;}
+#footer .footer-top ul li.on a{font-weight: 800;}
+#footer .footer-info{padding: 30px 4%; box-sizing: border-box; position: relative;}
+#footer .footer-info p{ font-weight: 800;}
+#footer .footer-info a{display: inline-block; width: auto; margin: 10px 0 20px; padding: 15px; border: 1px solid #999; font-size: 20px; font-weight: 800; text-align: center;}
+#footer .footer-info ul li{font-size: 14px;}
