--- a/src/main/webapp/resources/css/qna_board.css
+++ b/src/main/webapp/resources/css/qna_board.css
@@ -68,3 +68,51 @@ ul.list_board_body.faq_type > li.on > button .icon_box i{transform: rotate(180de
 
 .pagination ul li:hover{background: rgb(73, 73, 238); border-color: rgb(73, 73, 238);}
 .pagination ul li:hover a{color: #fff;}
+
+
+body.write .input-box{position: relative; background: #fff; border-radius: 9px; border: 1px solid #ddd; overflow:hidden; }
+body.write .input-box input[type=text],
+body.write .input-box input[type=password]{
+    border-radius: 9px;     
+    display: block;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+body.write .input-box textarea{display: block; width: 100%; padding: 10px; box-sizing: border-box; height: 500px;}
+body.write form dl{display: flex; margin-bottom: 10px; padding-bottom: 10px;  border-bottom: 1px solid #ddd; box-sizing: border-box;}
+body.write form dl dt{width: 20%; padding: 12px 0 0 10px; font-size: 14px; font-weight: 600;}
+body.write form dl dd{width: 80%;}
+
+body.write form dl:first-of-type{margin-top: 10px; padding-top: 10px; border-top: 1px solid #ddd;}
+
+
+body.view{}
+body.view dl{}
+body.view dl dt,
+body.view dl dd{padding: 20px 10px; box-sizing: border-box; border-top: 1px solid #ddd;}
+body.view dl dt{}
+body.view dl dd{border-bottom: 1px solid #ddd;}
+
+body.view dl dt p{font-size: 20px; font-weight: 600; margin-bottom: 10px;}
+body.view dl dt ul li{font-size: 14px;position: relative; margin-right: 10px; padding-right: 10px;}
+body.view dl dt ul li::after{content: ""; display: block; position: absolute; top:50%; right: 0; transform: translateY(-50%); width: 1px; height: 10px; background: #ddd;}
+body.view dl dt ul li:last-of-type{margin-right: 0; padding-right: 0;}
+body.view dl dt ul li:last-of-type::after{display: none;}
+body.view dl dt ul li span{color: #666;}
+
+body.view div.prev,
+body.view div.next{width:50%; border-bottom: 1px solid #ddd; box-sizing: border-box;;}
+body.view div.prev a,
+body.view div.next a{position: relative; display: block; width: 100%; padding: 10px; font-size: 14px; line-height: 1.3;}
+body.view div.prev a {padding-left: 60px;}
+body.view div.next a {padding-right: 60px; text-align: right;}
+
+body.view div.prev a span,
+body.view div.next a span{position: absolute; top:50%; transform: translateY(-50%); }
+
+body.view div.prev a span{left: 10px;}
+body.view div.next a span{right: 10px;}
+
