--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -69,7 +69,7 @@ button{border:0;}
 .txt-green{color: #0ac73e;}
 .txt-red{color: red;}
 .txt-yellow{color: yellow;}
-.txt-copy{font-size: 14px; color:#999}
+.copy{font-size: 14px; color:#999}
 
 
 /*...출력*/
@@ -90,3 +90,40 @@ button{border:0;}
 
 .pagination ul li:hover{background: rgb(73, 73, 238); border-color: rgb(73, 73, 238);}
 .pagination ul li:hover a{color: #fff;}
+
+
+
+.btn-area{margin-top: 20PX;}
+
+.btn-area button,
+.btn-area a{width:100%; height: 40px; font-size: 14px; font-weight: 600; text-align: center; line-height: 40px; background:rgb(73, 73, 238); border-radius: 9px; color: #fff; border: 1px solid transparent; transition: all 0.5s;}
+.btn-area button:hover,
+.btn-area a:hover{color: rgb(73, 73, 238); border-color: rgb(73, 73, 238); background: #fff;}
+
+.btn-area button.line,
+.btn-area a.line{color: rgb(73, 73, 238); border-color: rgb(73, 73, 238); background: #fff;}
+.btn-area button.line:hover,
+.btn-area a.line:hover{color:#fff; border-color: rgb(73, 73, 238); background:rgb(73, 73, 238);}
+
+.btn-area button.red,
+.btn-area a.red{background:rgb(253, 2, 65); border-color:rgb(253, 2, 65); color: #fff;}
+.btn-area button.red:hover,
+.btn-area a.red:hover{color: rgb(253, 2, 65); border-color: rgb(253, 2, 65); background: #fff;}
+
+.btn-area button.red-line,
+.btn-area a.red-line{color: rgb(253, 2, 65); border-color: rgb(253, 2, 65); background: #fff;}
+.btn-area button.red-line:hover,
+.btn-area a.red-line:hover{background:rgb(253, 2, 65); border-color: rgb(253, 2, 65); color: #fff;;}
+
+.btn-area.two,
+.btn-area.three,
+.btn-area.four{display: flex; justify-content: space-between; align-items: center;}
+
+.btn-area.two button,
+.btn-area.two a{width: 45%;}
+
+.btn-area.three button,
+.btn-area.three a{width: 30%;}
+
+.btn-area.four button,
+.btn-area.four a{width: 20%;}
