--- a/src/main/webapp/resources/css/member.css
+++ b/src/main/webapp/resources/css/member.css
@@ -5,7 +5,9 @@ input[type=checkbox]{}
 
 
 /* 로그인 회원가입 */
+
 body.member{background: #f5f5f5;}
+body.member #wrap{background:none;}
 body.member #header,
 body.member #footer{display: none;}
 
@@ -13,9 +15,8 @@ body.member #container{
     background:rgba(255,255,255,0.5); 
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.1); 
     border-radius: 15px; 
-    width: 50%; 
     padding: 50px;
-    margin: 100px auto;
+    margin: 50px auto;
 }
 
 body.member h3{font-size: 26px; text-align: center; margin-bottom: 30px;}
