--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -12,6 +12,9 @@ select{cursor: pointer;}
 
 button{border:0;}
 
+input[type=text],
+input[type=password]{border:0;}
+
 .img-box{position:relative; width:100%; overflow:hidden}
 .img-box img{display: block; object-fit: cover; width:100%; height:100%;}
 
