--- a/src/main/webapp/resources/css/checkpage.css
+++ b/src/main/webapp/resources/css/checkpage.css
@@ -6,6 +6,24 @@ body.charge #content > div{padding:20px; border-radius:9px; border:1px solid #dd
 body.charge #content > div.section01 > div{padding:20px; border-radius:9px; border:1px solid #ddd;}
 body.charge #content > div.section01 > div:last-child{margin-top:20px;}
 
-#block_C > div:last-child{margin-top: 20px;}
-#block_C h3{font-size:20px; font-weight:800;}
-#block_C p{}
+#block_A > div{width: 100%; height: 100%;}
+#block_A > div:first-child{border-bottom: 1px solid #ddd;}
+#block_A p{margin-bottom: 10px;}
+#block_A > div:last-child{margin-top: 10px;}
+
+#block_B > div{width: 100%; height: 100%;}
+#block_B > div > div:nth-child(1),
+#block_B > div > div:nth-child(2){border-bottom: 1px solid #ddd;}
+#block_B > div > div:nth-child(1) > div > p:last-of-type{margin-top: 10px;}
+#block_B > div > div:nth-child(2) > div > p:first-of-type{margin-top: 13px;}
+#block_B > div > div:nth-child(2) > div > p:first-of-type{margin-bottom: 10px;}
+#block_B > div > div:nth-child(3) > div > p:first-of-type{margin-top: 13px;}
+#block_B > div > div:nth-child(3) > div > p:last-of-type{margin-top: 12px;}
+#block_B > div > div:nth-child(4) > p{border-top: 1px solid #ddd; padding-top: 18px;}
+
+#block_C > div:last-child{margin-top: 15px;}
+h3, h5{font-size:20px; font-weight:800; margin-bottom: 15px;}
+p{font-size: 17px; margin-bottom: 5px;}
+#block_C p:last-child{margin-bottom: 15px;}
+#block_C > div{width: 100%; height: 100%; }
+#block_C > div:first-child{border-bottom: 1px solid #ddd;}
