--- a/src/main/webapp/resources/css/member.css
+++ b/src/main/webapp/resources/css/member.css
@@ -36,7 +36,7 @@ body.member .input-box input[type=password]{border-radius: 9px;}
 body.member .select-box select,
 body.member .input-box input{display: block; width: 100%; height: 50px; line-height: 50px; padding: 0 10px; box-sizing: border-box;}
 body.member .input-box button.check_btn{position: absolute; top: 50%; right: 5px; transform: translateY(-50%); font-size: 12px; padding: 10px;  background:#ddd; color: #fff; border-radius: 7px;}
-body.member .input-box button.passview{position: absolute; top: 50%; right: 5px; transform: translateY(-50%); color: #333; font-size: 20px;}
+body.member .input-box button.passview{position: absolute; top: 50%; right: 5px; transform: translateY(-50%); color: #333; font-size: 20px; background: none;}
 body.member .input-box button.on{background: rgb(73, 73, 238); border: 1px solid transparent;}
 body.member .input-box button.on:hover{color: rgb(73, 73, 238); border-color: rgb(73, 73, 238); background: #fff;}
 body.member .input-box span.time_count{font-size: 12px; position: absolute; right: 80px; top: 50%; transform: translateY(-50%); color:#999}
