--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -13,7 +13,8 @@ select{cursor: pointer;}
 button{border:0;}
 
 input[type=text],
-input[type=password]{border:0;}
+input[type=password],
+input[type=date]{border:0;}
 
 .img-box{position:relative; width:100%; overflow:hidden}
 .img-box img{display: block; object-fit: cover; width:100%; height:100%;}
@@ -65,7 +66,7 @@ input[type=password]{border:0;}
 .txt.sub{font-size: 20px;}
 .txt-center{text-align: center;}
 .txt.bold{font-weight: 600;}
-.txt.bolder{font-weight: 900;}
+.txt.bolder{font-weight: 800;}
 .cancle-txt{font-size: 12px; color: #999; text-decoration: line-through red;}
 .txt-info{font-size: 12px;}
 .txt-primary{color: rgb(73, 73, 238)}
