--- a/src/main/webapp/resources/css/qna_board.css
+++ b/src/main/webapp/resources/css/qna_board.css
@@ -72,7 +72,8 @@ ul.list_board_body.faq_type > li.on > button .icon_box i{transform: rotate(180de
 
 body.write .input-box{position: relative; background: #fff; border-radius: 9px; border: 1px solid #ddd; overflow:hidden; }
 body.write .input-box input[type=text],
-body.write .input-box input[type=password]{
+body.write .input-box input[type=password],
+body.write .input-box textarea{
     border-radius: 9px;     
     display: block;
     width: 100%;
@@ -82,6 +83,9 @@ body.write .input-box input[type=password]{
     box-sizing: border-box;
 }
 body.write .input-box textarea{display: block; width: 100%; padding: 10px; box-sizing: border-box; height: 500px;}
+body.write dl.txt-area{}
+body.write dl.txt-area dt,
+body.write dl.txt-area dd{padding: 0 0 0 10px}
 body.write form dl{display: flex; margin-bottom: 10px; padding-bottom: 10px;  border-bottom: 1px solid #ddd; box-sizing: border-box;}
 body.write form dl dt{width: 20%; padding: 12px 0 0 10px; font-size: 14px; font-weight: 600;}
 body.write form dl dd{width: 80%;}
@@ -90,11 +94,11 @@ body.write form dl:first-of-type{margin-top: 10px; padding-top: 10px; border-top
 
 
 body.view{}
-body.view dl{}
+body.view dl{margin-top:20px}
 body.view dl dt,
 body.view dl dd{padding: 20px 10px; box-sizing: border-box; border-top: 1px solid #ddd;}
 body.view dl dt{}
-body.view dl dd{border-bottom: 1px solid #ddd;}
+body.view dl dd{border-bottom: 1px solid #ddd; min-height:400px}
 
 body.view dl dt p{font-size: 20px; font-weight: 600; margin-bottom: 10px;}
 body.view dl dt ul li{font-size: 14px;position: relative; margin-right: 10px; padding-right: 10px;}
@@ -104,9 +108,9 @@ body.view dl dt ul li:last-of-type::after{display: none;}
 body.view dl dt ul li span{color: #666;}
 
 body.view div.prev,
-body.view div.next{width:50%; border-bottom: 1px solid #ddd; box-sizing: border-box;;}
+body.view div.next{width:50%; border-bottom: 1px solid #ddd; box-sizing: border-box;}
 body.view div.prev a,
-body.view div.next a{position: relative; display: block; width: 100%; padding: 10px; font-size: 14px; line-height: 1.3;}
+body.view div.next a{position: relative; display: block; width: 100%; padding: 10px; font-size: 14px; line-height: 1.3; box-sizing: border-box}
 body.view div.prev a {padding-left: 60px;}
 body.view div.next a {padding-right: 60px; text-align: right;}
 
@@ -116,3 +120,16 @@ body.view div.next a span{position: absolute; top:50%; transform: translateY(-50
 body.view div.prev a span{left: 10px;}
 body.view div.next a span{right: 10px;}
 
+
+#passwordModal{position:absolute; top:0; left:0; width:100%; height:100vh; background:rgba(0,0,0,0.5);}
+.modal-content{position:absolute; top:30%; left:50%; transform: translate(-50%, -50%); background:#fff;padding:50px 40px; box-sizing:border-box; border-radius:7px; width:80%;}
+.modal-content > .close-btn{
+	position: absolute;
+    top: 50px;
+    right: 40px;
+    font-size: 20px;
+    line-height: 1;
+    background: none;
+}
+.modal-content > h3{font-size:18px; font-weight:800; margin-bottom:20px;}
+.modal-content > input{width:100%; border-radius:7px; border:1px solid #ddd; line-height:40px; padding:0 10px; box-sizing:border-box; margin-bottom:10px;}
