--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -10,7 +10,8 @@ button,
 a,
 select{cursor: pointer;}
 
-button{border:0;}
+button,
+textarea{border:0;}
 
 input[type=text],
 input[type=password],
@@ -49,7 +50,7 @@ input[type=date]{border:0;}
 .flex.flex-wrap{flex-wrap:wrap;}
 .flex.ju-between{justify-content: space-between;}
 .flex.ju-center{justify-content: center;}
-.flex.ju-end{justify-content: end;}
+.flex.ju-end{justify-content: end !important;}
 .flex.ju-around{justify-content: space-around;}
 .flex.ju-evenly{justify-content: space-evenly;}
 .flex.column{flex-direction: column}
@@ -100,7 +101,7 @@ input[type=date]{border:0;}
 .btn-area{margin-top: 20PX;}
 
 .btn-area button,
-.btn-area a{width:100%; height: 40px; font-size: 14px; font-weight: 600; text-align: center; line-height: 40px; background:rgb(73, 73, 238); border-radius: 9px; color: #fff; border: 1px solid transparent; transition: all 0.5s;}
+.btn-area a{width:100%; height: 40px; font-size: 14px; font-weight: 600; text-align: center; line-height: 39px; background:rgb(73, 73, 238); border-radius: 9px; color: #fff; border: 1px solid transparent; transition: all 0.5s;}
 .btn-area button:hover,
 .btn-area a:hover{color: rgb(73, 73, 238); border-color: rgb(73, 73, 238); background: #fff;}
 
