--- a/src/main/webapp/resources/css/checkpage.css
+++ b/src/main/webapp/resources/css/checkpage.css
@@ -3,23 +3,36 @@
 body.charge h3, h5{font-size:20px; font-weight:800; margin-bottom: 15px;}
 
 body.charge #content{} 
-body.charge #content > div{padding:20px; border-radius:9px; border:1px solid #ddd; margin-top:20px;}
+body.charge #content > div{padding-top:20px; border-top:1px solid #ddd; margin-top:20px;}
 
-#block_A{border-bottom:10px solid rgba(0,0,0,0.05); margin-bottom:20px}
-#block_A > div{width: 100%; height: 100%;}
-#block_A > div:first-child{border-bottom: 1px solid #ddd;}
-#block_A p{margin-bottom: 10px;}
-#block_A > div:last-child{margin-top: 10px;}
+body.charge div#content.view > div{border:0;} 
+body.charge div.view div.box{border-radius:0;}
+body.charge div.view div.box > p span{display:block;}
+body.charge div.view div.box > p{margin-bottom:10px;}
+div.tit-area{ margin-bottom:20px;}
+div.tit-area p:last-child{font-size:12px;}
+div.tit-area p span{font-size:14px}
+div.tit-area p span.bold{font-size:26px;}
+div.bill-area{margin-bottom:20px;}
+div.bill-area div.bg-gray{padding:30px; box-sizing:border-box; background:#f5f5f5; border-radius:7px}
+div.bill-area div.bg-gray dl{padding-bottom:5px; font-size:14px; font-weight:600;}
+div.bill-area div.bg-gray div{margin-bottom:10px}
+div.chart > div.flex{position:relative; border-bottom:1px solid #ddd;}
+div.chart > div.flex > div{position:relative; width:30%; text-align:center; height:150px; margin-top:20px}
+div.chart > div.flex > div > div.bar{}
+span.price{    
+	position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 12px;
+}
 
-#block_B > div{width: 100%; height: 100%; border-bottom: 1px solid #ddd; margin-bottom: 10px; padding-bottom: 10px;}
-#block_B > div:last-child{border-bottom: 0; margin-bottom: 0; padding-bottom: 0;}
-
-
-#block_C > div:last-child{margin-top: 15px;}
-
-#block_C p:last-child{margin-bottom: 15px;}
-#block_C > div{width: 100%; height: 100%; }
-#block_C > div:first-child{border-bottom: 1px solid #ddd;}
+.avg{
+    margin-bottom: 20px;
+    font-size: 14px;
+    font-weight: 600;
+}
 
 .disabled {
     pointer-events: none;
