--- a/src/main/webapp/resources/css/qna_board.css
+++ b/src/main/webapp/resources/css/qna_board.css
@@ -2,13 +2,13 @@
 /*241205*/
 
 /* 게시판 */ 
-.page-tit{text-align: center; font-size: 40px;font-weight: 900; margin-top: 50px;}
+.page-tit{text-align: center; font-size: 30px;font-weight: 800; margin-top: 50px; line-height:1; margin-bottom:20px}
 
 .list_board{margin-top: 50px;}
 .list-top{padding-bottom: 20px;}
 
 /* total 검색 영역  */
-.total{ font-size: 14px; color: #999; font-weight: 600;}
+.total{ font-size: 14px; color: #999; font-weight: 600; padding:0 20px; box-sizing:border-box;} 
 .total span{color: #111;}
 .search-input{position: relative; padding-right: 40px; border: 1px solid #ddd; border-radius: 50px;}
 .search-input input{line-height: 40px; padding: 0 10px; border-radius: 50px;}
@@ -23,7 +23,8 @@ ul.list_board_body li ul.row li:nth-child(2){
     text-align: left; 
     padding-left: 10px;
     font-weight: 600;
-}/*제목*/
+}
+/*제목*/
 ul.list_board_body li ul.row li:nth-child(3){width: 10%; }/*첨부파일*/
 ul.list_board_body li ul.row li:nth-child(4){width: 17%;}/*작성자*/
 ul.list_board_body li ul.row li:nth-child(5){width: 20%;}/*작성일*/
@@ -38,17 +39,16 @@ ul.list_board_body > li.list-body > ul > li{border-bottom: 1px solid #ddd;}
 ul.list_board_body > li.list-body > ul > li > a{display: block;}
 ul.list_board_body > li.list-body > ul > li > a:hover ul li{color: rgb(73, 73, 238);}
 
-/* faq 스타일  */
-ul.list_board_body.faq_type > li{border-bottom: 1px solid #ddd; width: 100%;}
-ul.list_board_body.faq_type > li > button{position: relative;  width: 100%; text-align: left; padding: 20px 10px; box-sizing: border-box; font-size: 20px; font-weight: 800;}
-ul.list_board_body.faq_type > li > button .icon_box{position: absolute; top: 50%; right: 10px; transform: translateY(-50%); transition: all 0.5; font-size: 12px; color: #666; width: 35px; height: 35px; border:1px solid #666; text-align: center;  }
-ul.list_board_body.faq_type > li > button .icon_box i{line-height: 35px;}
-ul.list_board_body.faq_type > li > button span{display: block; font-size: 12px; color: #666; font-weight: 400;}
-ul.list_board_body.faq_type > li > div{padding: 10px; background: #f5f5f5; border-radius: 9px; margin-bottom: 10px;}
+/* charge 스타일  */
+ul.list_board_body.charge_type > li{position:relative; border-bottom: 1px solid #ddd; width: 100%;}
+ul.list_board_body.charge_type > li a{position:relative;}
+ul.list_board_body.charge_type > li div.box{padding:20px; box-sizing:border-box;}
+ul.list_board_body.charge_type > li div.tit-area p{padding-bottom:5px}
+ul.list_board_body.charge_type > li div.tit-area p:nth-child(2){padding-bottom:0}
+ul.list_board_body.charge_type > li p.more{position:absolute; top:20px; right:20px; font-size:14px;}
+ul.list_board_body.charge_type li a{display: block;}
+ul.list_board_body.charge_type li a:hover{bbackground:#f5f5f5}
 
-
-ul.list_board_body.faq_type > li.on > button .icon_box{color: rgb(73, 73, 238); border-color: rgb(73, 73, 238);}
-ul.list_board_body.faq_type > li.on > button .icon_box i{transform: rotate(180deg);}
 
 /*...출력*/
 .ell {display:inline-block; max-width:97%; height: auto; overflow:hidden; text-overflow:ellipsis; vertical-align:middle; white-space:nowrap; word-wrap: break-word;  word-break: break-all;}
